# DimLayerHBM

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/disptunerd/: CMakeLists.txt
app/src/main/cpp/disptunerd/elfsym/: ElfView.h  ProcessView.h
app/src/main/cpp/disptunerd/inject/: Injector.h  SysServicePatch.h
app/src/main/cpp/disptunerd/inject/arch/: ptrace_inject_arch.h  ptrace_inject_utils.h
app/src/main/cpp/disptunerd/ipc/: IpcStateController.cpp  IpcStateController.h
app/src/main/cpp/disptunerd/ipc/logbuffer/: LocalLogBuffer.h
app/src/main/cpp/disptunerd/service/: HwServiceStatus.cpp  HwServiceStatus.h  IBaseService.h  ServiceManager.h
app/src/main/cpp/disptunerd/service/front/: AppClientProxy.cpp  AppClientProxy.h  DispTunerDaemonImpl.cpp  DispTunerDaemonImpl.h
app/src/main/cpp/disptunerd/service/hw/: BaseHwHalHandler.h
app/src/main/cpp/disptunerd/service/hw/opdispfeature/: OpDispFeatureHandler.cpp  OpDispFeatureHandler.h
app/src/main/cpp/disptunerd/startup/: common.h  daemon.cpp  daemon.h  startup.c
app/src/main/cpp/libappclient/: AppClientImpl.cpp  AppClientImpl.h  CMakeLists.txt  DispTunerDaemonProxy.cpp  DispTunerDaemonProxy.h  IpcConnector.cpp  IpcConnector.h  ipc_handle_jni.cpp  ipc_handle_jni.h  version.c
app/src/main/cpp/libbasehalpatch/: CMakeLists.txt
app/src/main/cpp/libbasehalpatch/hook/: HookParams.h  hook_proc_symbols.cpp  hook_proc_symbols.h  hook_sym_struct.h  hook_trampoline.cpp  hook_trampoline.h  intercept_callbacks.h
app/src/main/cpp/libbasehalpatch/ipc/: daemon_ipc_struct.h  inject_io_init.h  ipc_io_event.cpp  ipc_io_event.h  ipc_looper.h  request_handler.h
app/src/main/cpp/libopdispfeatpatch/: CMakeLists.txt  inject_entry.c
app/src/main/cpp/libopdispfeatpatch/ipc/: ipc_request_handler.cpp  ipc_requests.h
app/src/main/cpp/rpcprotocol/: CMakeLists.txt  IAppClient.h  IDispTunerDaemon.cpp  IDispTunerDaemon.h
app/src/main/cpp/rpcprotocol/log/: DefaultSessionLogImpl.h  LogEntryRecord.h  SessionLog.h
app/src/main/cpp/rpcprotocol/protocol/: ArgList.h  BaseIpcObject.h  BaseIpcProxy.h  LpcArgListExtractor.h  LpcResult.h
app/src/main/cpp/rpcprotocol/utils/: FileMemMap.h  ProcessUtils.h  SELinux.h  SignalHandler.h  TextUtils.h  Uuid.h  auto_close_fd.h  io_utils.h
app/src/main/java/cc/ioctl/opdisplaytuner/activity/: JumpEntryActivity.java  MainUiFragmentActivity.java  MipmapGenActivity.java  ShadowSafTransientActivity.java  SidebandHostActivity.java
app/src/main/java/cc/ioctl/opdisplaytuner/activity/base/: AppActivity.java  BaseActivity.java  BaseBottomSheetDialogFragment.java  BasePreferenceFragment.java
app/src/main/java/cc/ioctl/opdisplaytuner/activity/ui/dump/: BaseHalDumpFragment.java  NciLiveDumpFragment.java  NciLiveDumpViewModel.java
app/src/main/java/cc/ioctl/opdisplaytuner/activity/ui/home/: HomeFragment.kt  HomeViewModel.java
app/src/main/java/cc/ioctl/opdisplaytuner/activity/ui/log/: DaemonLogFragment.kt  DaemonLogViewModel.java
app/src/main/java/cc/ioctl/opdisplaytuner/activity/ui/misc/: LicenseNoticeDialogFragment.kt
app/src/main/java/cc/ioctl/opdisplaytuner/activity/ui/startup/: InfoFragment.java  (+2 more)
app/src/main/java/cc/ioctl/opdisplaytuner/decoder/: IoctlDecoder.java  NxpHalV2EventTranslator.java  NxpHalV2IoEventHandler.java
app/src/main/java/cc/ioctl/opdisplaytuner/ipc/daemon/: IDispTunerDaemon.java  IpcNativeHandler.java
app/src/main/java/cc/ioctl/opdisplaytuner/service/: BootCompleteReceiver.java  DisplayTunerControlsProviderService.java  QuickSettingTileService.java
app/src/main/java/cc/ioctl/opdisplaytuner/startup/: BaseApplicationDelegate.java  BaseApplicationImpl.java  MainApplicationImpl.java  StartupDirector.java  Step.java  StepFactory.java  WorkerApplicationImpl.java
app/src/main/java/cc/ioctl/opdisplaytuner/startup/step/: EarlyInit.java  EmptyStep.java  StartDaemonService.java
app/src/main/java/cc/ioctl/opdisplaytuner/util/: ByteUtils.java  Errno.java  FaultyDialog.java  MimeTypeUtils.java  NativeInterface.java  NativeUtils.java  RootShell.java  SafUtils.java  ThreadManager.java  UiUtils.java  Utils.java
app/src/main/java/cc/ioctl/opdisplaytuner/util/annotation/: ConfigGroup.java
app/src/main/java/cc/ioctl/opdisplaytuner/util/config/: AbsObservableItem.java  BaseMmkvConfigItem.java  ConfigManager.java  GenericConfig.java  IConfigItem.java  IObservable.java  LazyNonNullMmkvItemConfig.kt  LazyNullableMmkvItemConfig.kt  MmkvConfigManagerImpl.java  NonNullConfigItem.java  NonNullConstantValueConfigItem.java  NonNullMmkvConfigItem.java  NullableConfigItem.java  NullableMmkvConfigItem.java  PrefLutUtils.java
app/src/main/res/drawable/: ic_settings_brightness_32.xml  icon_foreground.xml
app/src/main/res/layout/: dialog_license_notice.xml  frag_warn_app_risk.xml  fragment_main_home.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml  menu_fragment_home.xml
app/src/main/res/mipmap/: ic_launcher.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: backup_rules.xml  root_preferences.xml
(+3 files in other folders)
